# gtk-editor

./: .gitignore  CMakeLists.txt  Notes.cpp  Notes.hpp  README.md  Sui.txt  UG_Editor.desktop  Window.cpp  Window.hpp  main.cpp  menu.ui  text.txt  windowStyle.css
configs/: toOpen.config
